--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,14 @@
   margin-right: auto;
   background-color: azure;
 }
+.added {
+  display: none;
+  background-color: rgb(0, 255, 191);
+  /* width: 500px; */
+  position: fixed;
+  top: 70px;
+  /* left: auto; */
+  right: 50px;
+  opacity: 50%;
+  padding: 45px;
+}
