--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,24 @@
 .added {
   display: none;
   background-color: rgb(0, 255, 191);
-  /* width: 500px; */
   position: fixed;
+  height: 80%;
   top: 70px;
-  /* left: auto; */
-  right: 50px;
+  right: 10px;
   opacity: 50%;
-  padding: 45px;
+  padding: 5px;
+  overflow: scroll;
+}
+.addAasanaContainer {
+  background-color: aliceblue;
+  padding: 2px;
+  margin-bottom: 4px;
+  text-align: center;
+  border-radius: 8px;
+}
+.totalTime {
+  position: relative;
+  /* left: 100px; */
+  bottom: 18px;
+  font-size: 34px;
 }
