--- a/styles.css
+++ b/styles.css
@@ -26,5 +26,13 @@
   position: relative;
   /* left: 100px; */
   bottom: 18px;
-  font-size: 34px;
+  font-size: 16px;
+}
+.js-time {
+  position: fixed;
+  top: 5px;
+  right: 25px;
+  width: 120px;
+  text-align: center;
+  padding: 4px;
 }
