--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
+button,
+input {
+  cursor: pointer;
+}
+
 .list-asanas {
   width: 700px;
   margin-left: auto;
@@ -12,7 +17,7 @@
   top: 70px;
   right: 10px;
   opacity: 50%;
-  padding: 5px;
+  padding: 10px;
   overflow: scroll;
 }
 .addAasanaContainer {
@@ -29,10 +34,28 @@
   font-size: 16px;
 }
 .js-time {
+  display: none;
   position: fixed;
+  background-color: aqua;
   top: 5px;
   right: 25px;
   width: 120px;
   text-align: center;
   padding: 4px;
+}
+.modal {
+  display: none;
+  margin-left: 50px;
+  /* margin-right: ; */
+  width: 80%;
+  height: 80%;
+  /* left: 700px; */
+  position: fixed;
+  /* background: -moz-linear-gradient(); */
+  background-color: aqua;
+  /* opacity: 0.4; */
+}
+.modalBtn {
+  margin-left: 90%;
+  margin-top: 10px;
 }
