--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,17 @@ input {
   margin-left: 90%;
   margin-top: 10px;
 }
+.progress-container {
+  width: 100%;
+  height: 20px;
+  background: #ddd;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.progress-bar {
+  width: 100%;
+  height: 100%;
+  background: #4caf50;
+  transition: width 1s linear;
+}
