--- a/styles.css
+++ b/styles.css
@@ -13,12 +13,12 @@ input {
   display: none;
   background-color: rgb(0, 255, 191);
   position: fixed;
-  height: 80%;
+  height: 70%;
   top: 70px;
   right: 10px;
   opacity: 50%;
   padding: 10px;
-  overflow: scroll;
+  overflow: auto;
 }
 .addAasanaContainer {
   background-color: aliceblue;
@@ -37,11 +37,21 @@ input {
   display: none;
   position: fixed;
   background-color: aqua;
-  top: 5px;
+  top: 15px;
   right: 25px;
   width: 120px;
   text-align: center;
   padding: 4px;
+}
+.js-start {
+  display: none;
+  position: fixed;
+  right: 80px;
+  bottom: 20px;
+  padding-left: 4px;
+  background-color: rgb(96, 242, 247);
+  color: #ddd;
+  font-size: 22px;
 }
 .modal {
   display: none;
