--- a/styles.css
+++ b/styles.css
@@ -27,29 +27,33 @@ input {
   text-align: center;
   border-radius: 8px;
 }
+.total-time-start {
+  position: fixed;
+}
+
 .totalTime {
-  position: relative;
+  /* position: relative; */
   /* left: 100px; */
-  bottom: 18px;
+  /* bottom: 18px; */
   font-size: 16px;
 }
 .js-time {
   display: none;
-  position: fixed;
+  /* position: fixed; */
   background-color: aqua;
-  top: 15px;
-  right: 25px;
+  /* top: 15px; */
+  /* right: 25px; */
   width: 120px;
   text-align: center;
   padding: 4px;
 }
 .js-start {
   display: none;
-  position: fixed;
-  right: 80px;
-  bottom: 20px;
-  padding-left: 4px;
-  background-color: rgb(96, 242, 247);
+  /* position: fixed; */
+  /* right: 80px; */
+  /* bottom: 20px; */
+  /* padding-left: 4px; */
+  background-color: rgb(96, 136, 247);
   color: #ddd;
   font-size: 22px;
 }
