--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,6 @@ li {
   /* margin-right: 12px; */
   border-radius: 8px;
 }
-.time-input::before {
-  content: "hl;";
-  font-size: large;
-  color: red;
-}
 
 .fieldDescription {
   display: flex;
@@ -67,16 +62,17 @@ li {
 }
 .list-asanas {
   width: 700px;
-  margin-left: auto;
-  margin-right: auto;
+  /* margin-left: auto; */
+  /* margin-right: auto; */
   background-color: azure;
 }
 .added {
   display: none;
   background-color: rgb(0, 255, 191);
   position: fixed;
+  width: 150px;
   height: 70%;
-  top: 70px;
+  top: 140px;
   right: 10px;
   opacity: 50%;
   padding: 10px;
@@ -91,13 +87,15 @@ li {
 }
 .total-time-start {
   position: fixed;
+  right: 45px;
+  top: 5px;
 }
 
 .totalTime {
   /* position: relative; */
   /* left: 100px; */
   /* bottom: 18px; */
-  font-size: 16px;
+  /* font-size: 14px; */
 }
 .js-time {
   display: none;
@@ -105,7 +103,7 @@ li {
   background-color: aqua;
   /* top: 15px; */
   /* right: 25px; */
-  width: 120px;
+  width: 140px;
   text-align: center;
   padding: 4px;
 }
