--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ li {
   position: fixed;
   width: 150px;
   height: 70%;
-  top: 140px;
+  top: 14px;
   right: 10px;
   opacity: 50%;
   padding: 10px;
@@ -88,15 +88,15 @@ li {
 .total-time-start {
   position: fixed;
   right: 45px;
-  top: 5px;
+  bottom: 18px;
 }
 
-.totalTime {
-  /* position: relative; */
-  /* left: 100px; */
-  /* bottom: 18px; */
-  /* font-size: 14px; */
-}
+/* .totalTime { */
+/* position: relative; */
+/* left: 100px; */
+/* bottom: 18px; */
+/* font-size: 14px; */
+/* } */
 .js-time {
   display: none;
   /* position: fixed; */
@@ -106,6 +106,7 @@ li {
   width: 140px;
   text-align: center;
   padding: 4px;
+  border-radius: 6px;
 }
 .js-start {
   display: none;
@@ -113,9 +114,10 @@ li {
   /* right: 80px; */
   /* bottom: 20px; */
   /* padding-left: 4px; */
-  background-color: rgb(96, 136, 247);
+  background-color: rgb(223, 54, 42);
   color: #ddd;
   font-size: 22px;
+  border-radius: 6px;
 }
 .modal {
   display: none;
