--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ li {
 }
 .list-asanas {
   width: 700px;
+  padding: 20px;
   /* margin-left: auto; */
   /* margin-right: auto; */
   background-color: azure;
@@ -108,6 +109,14 @@ li {
   padding: 4px;
   border-radius: 6px;
 }
+.js-numberOfAsanas {
+  display: none;
+  background-color: aqua;
+  width: 180px;
+  text-align: center;
+  padding: 4px;
+  border-radius: 6px;
+}
 .js-start {
   display: none;
   /* position: fixed; */
@@ -121,6 +130,7 @@ li {
 }
 .modal {
   display: none;
+  padding: 20px;
   /* margin-left: 50px; */
   /* margin-right: ; */
   width: 80%;
@@ -179,4 +189,9 @@ li {
 
 .unvisible {
   display: none;
+}
+
+.container {
+  display: grid;
+  place-content: center;
 }
